fixed wrapping issues with flexbox

--- a/merge.css
+++ b/merge.css
@@ -6,6 +6,10 @@
     background-color: #24252A;
 }
 
+body{
+    margin: 0 20px 0 20px;
+}
+
 header {
     display: flex;
     justify-content: flex-end;
@@ -64,16 +68,21 @@ button:hover {
 
 .content{
     display: flex;
-    justify-content: flex-start;
-    
+    justify-content: center;
+    flex-direction: row;
+    row-gap: 10px;
+    flex-wrap: wrap;
+
+
     
 }
 
 #main {
     border: 3px solid white;
-    margin: 1% 0 0 20px;
-    width: 100%;
-    height: 100%;
+    width: 1000px;
+    height: 600px;
+    align-self: center;
+    margin-top: 100px;
     
 
 }
@@ -86,8 +95,7 @@ button:hover {
     align-items: center;
     align-self: center;
     margin-left: 20px;
-    margin-right: 20px;
-    width: 800px;
+    width: 500px;
     height: 500px;
 }
 
